# my-agent

./: .debug.log.swp  .gitignore  .main.py.swp  .prompt.py.swp  AGENTS.md  CLAUDE.md  README.md  agent.sh  api.py  autobot_weixin.py  call_api.py  chrome.md  debugger.py  executor.py  img.sh  logger.py  main.py  parser.py  planner.py  prompt.py  prompt_compress.py  prompt_result.txt  redblack_tree.py  rule.md  scanner.py  start.sh  system.py  utel_encoder.py  weixin.md
code_ai_tools/: README.md  index_lancedb.py  (+3 more)
wechat-ocr/: CLAUDE.md  CMakeLists.txt  README.md  WECHAT_OCR.md  build.sh  build_final.sh  deploy.sh  monitor  monitor.c  record_and_send.sh  run.lua  run.sh  run_ops.lua  wechat_robot.lua  wechat_send_and_record.sh
wechat-ocr/lib/: wechat_ocr_core.cpp  wechat_ocr_core.h
wechat-ocr/lua/: ocr_core.lua  wechat_monitor.lua
wechat-ocr/src/: main.cpp  monitor.cpp  monitor.hpp  ocr.cpp  ocr.hpp  screenshot.cpp  screenshot.hpp
wechat-ocr/tests/: TEST.md  ai_to_wechat.lua  chrome_bridge.lua  find_all_icons.py  find_avatars.py  find_first_icons.py  find_icons.py  find_red_badges.py  find_third_icons.py  google_ai_qa.lua  google_ai_test.lua  mark_avatars.py  mark_columns.py  monitor.lua  news_execute.lua  send_dragonboat.lua  test_3columns.lua  test_ai_search.lua  test_all_icons.lua  test_avatar_badges.lua  test_avatars.lua  test_contacts_search.lua  test_first_column.lua  test_first_icons.lua  test_icons.lua  test_open_chrome.lua  test_screenshot.lua  test_search.lua  test_send_file.lua  test_third_icons.lua  test_two_lines.lua  test_unread_detect.lua
(+44 files in other folders)
